# proyecto

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: carrera.cpp  carrera.h  curso.cpp  curso.h  estudiante.cpp  estudiante.h  matricula.cpp  matricula.h  persona.cpp  persona.h  registroacademico.cpp  registroacademico.h  sistemaAcademico.cpp  sistemaAcademico.h
database/: conexionDB.cpp  conexionDB.h
db/: universidad_db.sql
include/: ConexionDB.h  Curso.h  Estudiante.h
reportes/: cursos_por_demanda.csv  estudiantes_por_curso.csv
src/: ConexionDB.cpp  Curso.cpp  Estudiante.cpp
structures/: ArbolB.h  ArbolExpresiones.h  SimuladorMemoria.h  avl.h  bst.h  cola.h  grafo.h  listaDoble.h  listaSimple.h  pila.h  tablaHash.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
